2012-09-09 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, sdccconf_in.h:
	  removed (commented out) avr and xa51 configuration options

2012-09-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as8051/Makefile.in,
	* sdas/as8051/asx8051.vcxproj,
	* sdas/as8051/asx8051.vcxproj.filters,
	* sdas/as8051/i51ext.c: removed i51ext.c
	* sdas/as6808/m08mch.c,   sdas/as6808/m08pst.c,
	* sdas/as8051/i51mch.c,   sdas/as8051/i51pst.c,
	* sdas/asgb/gbmch.c,      sdas/asgb/gbpst.c,
	* sdas/asrab/rabbitmch.c, sdas/asrab/rabbitpst.c,
	* sdas/asz80/z80mch.c,    sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c,  sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c,  sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asout.c,   sdas/asxxsrc/asxxxx.h: small step towards ASxxxx v5
	* src/mcs51/gen.c(freeAsmop): fix for MSVC
	* src/SDCCsymt.c(typeFromStr): added 'C' for const
	* src/z80/main.c(_z80_builtins): use 'C' to fix warnings

2012-09-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3565757.c:
	  Fixed bug #3565757.

2012-09-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3559997.c:
	  Fixed bug #3559997.

2012-09-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (checkSClass),
	* src/SDCCast.c (expandInlineFuncs): fixed bug #3564755

2012-09-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (cheapestVal): fixed bug #3563977
	* support/regression/tests/enum.c: tests added for bug #3563977

2012-09-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (operandOperation): fixed bug #3537139

2012-09-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkelf.c,
	* src/hc08/gen.c: Fixed bug #3536431

2012-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp: