@@ -1,3 +1,9 @@
+2012-09-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/tests/inline.c: added test for bug #3564755
+	* support/regression/tests/bug3565757.c: temporarily disabled bool
+	  in struct
+
 2012-09-09 Borut Razem <borut.razem AT gmail.com>
 
 	* configure.in, configure, sdccconf_in.h:
